# whisper_listener

./: .gitignore  Dockerfile  LICENSE  Readme.md  docker-compose.yaml  main.py  pyproject.toml  recognition.py
src/: main.py  recognition.py
